--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -227,18 +227,17 @@
   </command>
   
   <command>
-    <name>yara_linux</name>
-    <executable>yara.sh</executable>
-    <extra_args>-yara_path /usr/local/bin -yara_rules /tmp/yara/rules/yara_rules.yar</extra_args>
+    <name>yara</name>
+    <executable>yara.sh</executable> <expect>srcip</expect>
     <timeout_allowed>no</timeout_allowed>
   </command>
 
   <active-response>
-    <disabled>no</disabled>
-    <command>yara_linux</command>
-    <location>local</location>
-    <rules_id>100200,100201</rules_id>
+    <command>yara</command>
+    <location>agent</location>
+    <rules_id>550,554</rules_id> <level>7</level>
   </active-response>
+
   <!--
   <active-response>
     active-response options here
