--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -228,14 +228,16 @@
   
   <command>
     <name>yara</name>
-    <executable>yara.sh</executable> <expect>srcip</expect>
+    <executable>yara.sh</executable> 
+    <expect>srcip</expect>
     <timeout_allowed>no</timeout_allowed>
   </command>
 
   <active-response>
     <command>yara</command>
     <location>agent</location>
-    <rules_id>550,554</rules_id> <level>7</level>
+    <rules_id>550,554</rules_id> 
+    <level>7</level>
   </active-response>
 
   <!--
