--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -235,7 +235,7 @@
 
   <active-response>
     <command>yara</command>
-    <location>agent</location>
+    <location>local</location>
     <rules_id>550,554</rules_id> 
     <level>7</level>
   </active-response>
