--- a/Tools/Wazuh/Configs/linux-default.conf
+++ b/Tools/Wazuh/Configs/linux-default.conf
@@ -1,4 +1,10 @@
 <ossec_config>
+    <sca>
+      <enabled>yes</enabled>
+      <scan_on_start>yes</scan_on_start>
+      <interval>30m</interval>
+      <skip_nfs>yes</skip_nfs>
+    </sca>
     <syscheck>
     <frequency>60</frequency>
     <scan_on_start>yes</scan_on_start>
