--- a/Tools/Wazuh/Configs/linux-default.conf
+++ b/Tools/Wazuh/Configs/linux-default.conf
@@ -8,7 +8,7 @@
     <syscheck>
         <frequency>60</frequency>
         <scan_on_start>yes</scan_on_start>
-        <directories check_all="yes" whodata="yes" report_changes="yes">/tmp/test</directories>
+        <directories realtime="yes" check_all="yes" whodata="yes" report_changes="yes">/tmp/test</directories>
         <wodle name="command">
             <disabled>no</disabled>
             <tag>YaraAR</tag>
