--- a/Tools/Wazuh/Configs/linux-default.conf
+++ b/Tools/Wazuh/Configs/linux-default.conf
@@ -1,4 +1,4 @@
-<ossec_config>
+<agent_config>
     <sca>
         <enabled>yes</enabled>
         <scan_on_start>yes</scan_on_start>
@@ -24,4 +24,5 @@
         <enabled>yes</enabled>
         <feed-update-interval>120m</feed-update-interval>
     </vulnerability-detection>
-</ossec_config>
+</agent_config>
+
