--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -228,16 +228,15 @@
   
   <command>
     <name>yara</name>
-    <executable>yara.sh</executable> 
-    <expect>srcip</expect>
-    <timeout_allowed>no</timeout_allowed>
+    <executable>yara.sh</executable>
+    <expect>srcip, user, filename</expect>
+    <timeout_allowed>yes</timeout_allowed>
   </command>
 
   <active-response>
     <command>yara</command>
     <location>local</location>
-    <rules_id>550,554</rules_id> 
-    <level>7</level>
+    <rules_id>550, 554</rules_id> <level>7</level>
   </active-response>
 
   <!--
