--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -225,19 +225,22 @@
     <executable>netsh.exe</executable>
     <timeout_allowed>yes</timeout_allowed>
   </command>
-  
+
+
   <command>
-    <name>yara</name>
+    <name>yara_linux</name>
     <executable>yara.sh</executable>
-    <expect>srcip, user, filename</expect>
-    <timeout_allowed>yes</timeout_allowed>
+    <extra_args>-yara_path /usr/local/bin -yara_rules /tmp/yara/rules/yara_rules.yar</extra_args>
+    <timeout_allowed>no</timeout_allowed>
   </command>
 
   <active-response>
-    <command>yara</command>
+    <disabled>no</disabled>
+    <command>yara_linux</command>
     <location>local</location>
-    <rules_id>550, 554</rules_id> <level>7</level>
+    <rules_id>100300,100301</rules_id>
   </active-response>
+
 
   <!--
   <active-response>
