--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -225,22 +225,19 @@
     <executable>netsh.exe</executable>
     <timeout_allowed>yes</timeout_allowed>
   </command>
-
-
+  
   <command>
-    <name>yara_linux</name>
+    <name>yara</name>
     <executable>yara.sh</executable>
-    <extra_args>-yara_path /usr/local/bin -yara_rules /tmp/yara/rules/yara_rules.yar</extra_args>
-    <timeout_allowed>no</timeout_allowed>
+    <expect>srcip, user, filename</expect>
+    <timeout_allowed>yes</timeout_allowed>
   </command>
-
+  
   <active-response>
-    <disabled>no</disabled>
-    <command>yara_linux</command>
+    <command>yara</command>
     <location>local</location>
-    <rules_id>100300,100301</rules_id>
+    <rules_id>550, 554</rules_id> <level>7</level>
   </active-response>
-
 
   <!--
   <active-response>
