--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -229,7 +229,7 @@
   <command>
     <name>yara</name>
     <executable>yara.sh</executable>
-    <expect>srcip, user, filename</expect>
+    <expect>filename</expect>
     <timeout_allowed>yes</timeout_allowed>
   </command>
   
