--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -229,7 +229,7 @@
   <command>
     <name>yara</name>
     <executable>yara.sh</executable>
-    <expect>filename</expect>
+        <extra_args>-yara_path /usr/local/bin -yara_rules /var/ossec/etc/yara/rules/production.yar</extra_args>
     <timeout_allowed>yes</timeout_allowed>
   </command>
   
