Redo-ing Yara and Repo Cleanup

--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -227,17 +227,18 @@
   </command>
   
   <command>
-    <name>yara</name>
-    <executable>yara.sh</executable>
-        <extra_args>-yara_path /usr/local/bin -yara_rules /var/ossec/etc/yara/rules/production.yar</extra_args>
-    <timeout_allowed>yes</timeout_allowed>
-  </command>
-  
-  <active-response>
-    <command>yara</command>
-    <location>local</location>
-    <rules_id>550, 554</rules_id> <level>7</level>
-  </active-response>
+      <name>yara</name>
+      <executable>yara.sh</executable>
+      <expect>filename</expect>
+      <extra_args>-yara_path /usr/share/yara/yara-4.2.3 -yara_rules /usr/local/signature-base/yara_base_ruleset_compiled.yar</extra_args>
+      <timeout_allowed>no</timeout_allowed>
+    </command>
+
+    <active-response>
+      <command>yara</command>
+      <location>local</location>
+      <rules_id>550,554</rules_id>
+    </active-response>
 
   <!--
   <active-response>
