--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -230,7 +230,7 @@
       <name>yara</name>
       <executable>yara.sh</executable>
       <expect>filename</expect>
-      <extra_args>-yara_path /usr/share/yara/yara-4.2.3 -yara_rules /usr/local/signature-base/yara_base_ruleset_compiled.yar</extra_args>
+      <extra_args>-yara_path /usr/bin/yara -yara_rules /opt/yara-rules/compiled_community_rules.yarac</extra_args>
       <timeout_allowed>no</timeout_allowed>
     </command>
 
