let's give it a quick test

--- a/Tools/Wazuh/ossec.conf
+++ b/Tools/Wazuh/ossec.conf
@@ -227,24 +227,66 @@
   </command>
   
   <command>
-      <name>yara</name>
-      <executable>yara.sh</executable>
-      <expect>filename</expect>
-      <extra_args>-yara_path /usr/bin/yara -yara_rules /opt/yara-rules/compiled_community_rules.yarac</extra_args>
-      <timeout_allowed>no</timeout_allowed>
-    </command>
+    <name>yara</name>
+    <executable>yara.sh</executable>
+    <expect>filename</expect>
+    <extra_args>-yara_path /usr/bin/yara -yara_rules /opt/yara-rules/compiled_community_rules.yarac</extra_args>
+    <timeout_allowed>no</timeout_allowed>
+  </command>
 
-    <active-response>
-      <command>yara</command>
-      <location>local</location>
-      <rules_id>550,554</rules_id>
-    </active-response>
-
-  <!--
   <active-response>
-    active-response options here
+    <command>yara</command>
+    <location>local</location>
+    <rules_id>550,554</rules_id>
   </active-response>
-  -->
+
+
+
+<!-- Custom Active Response Configuration from SOCFortress/Gemini-->
+
+  <!-- A. Define the commands -->
+  <command>
+    <name>dns-stats</name>
+    <executable>custom-dnsstats</executable>
+    <expect>srcip</expect>
+    <timeout_allowed>no</timeout_allowed>
+  </command>
+
+  <command>
+    <name>nmap-scan</name>
+    <executable>nmap_scan.py</executable>
+    <expect>srcip</expect>
+    <timeout_allowed>no</timeout_allowed>
+  </command>
+
+  <command>
+    <name>yara-scan</name>
+    <executable>yara_full_scan.sh</executable>
+    <expect>agent_id</expect>
+    <timeout_allowed>no</timeout_allowed>
+  </command>
+
+  <!-- B. Define the triggers for the commands -->
+  <!-- This example triggers dns-stats when rule 100612 fires. -->
+  <!-- You MUST customize these triggers for your specific needs. -->
+  <active-response>
+    <command>dns-stats</command>
+    <location>server</location>
+    <rules_id>100612</rules_id>
+  </active-response>
+
+  <!-- Example: Trigger a yara scan on any alert with level 12 or higher -->
+
+  <active-response>
+    <command>yara-scan</command>
+    <location>server</location>
+    <level>12</level>
+  </active-response>
+
+
+
+
+
 
   <!-- Log analysis -->
   <localfile>
