--- a/Tools/Wazuh/Configs/linux-default.conf
+++ b/Tools/Wazuh/Configs/linux-default.conf
@@ -1,12 +1,118 @@
 <agent_config>
     <syscheck>
-        <frequency>60</frequency>
+        <frequency>120</frequency>
         <scan_on_start>yes</scan_on_start>
         <directories realtime="yes" check_all="yes" whodata="yes" report_changes="yes">/tmp/test</directories>
+
+
+        <directories check_all="yes" whodata="yes">/bin</directories>
+        <directories check_all="yes" whodata="yes">/sbin</directories>
+        <directories check_all="yes" whodata="yes">/usr/bin</directories>
+        <directories check_all="yes" whodata="yes">/usr/sbin</directories>
+        
+        <directories check_all="yes" report_changes="yes" whodata="yes">/etc</directories>
+        
+        <directories check_all="yes" whodata="yes">/boot</directories>
+        <directories check_all="yes" whodata="yes">/lib/modules</directories>
+        <directories check_all="yes" whodata="yes">/lib64</directories>
+        
+        <directories check_all="yes" report_changes="yes" whodata="yes">/root</directories>
+        <directories check_all="yes" report_changes="yes" whodata="yes">/home/*/.bash*</directories>
+        <directories check_all="yes" report_changes="yes" whodata="yes">/home/*/.profile</directories>
+        <directories check_all="yes" report_changes="yes" whodata="yes">/home/*/.ssh</directories>
+        
+        <directories check_all="yes" realtime="yes" report_changes="yes" whodata="yes">/var/spool/cron</directories>
+        <directories check_all="yes" realtime="yes" report_changes="yes" whodata="yes">/etc/cron*</directories>
+
+          <ignore>/etc/mtab</ignore>
+          <ignore>/etc/hosts.deny</ignore>
+          <ignore>/etc/hosts.allow</ignore>
+          <ignore>/etc/random-seed</ignore>
+          <ignore>/etc/resolv.conf</ignore>
+          <ignore>/etc/adjtime</ignore>
+          <ignore>/etc/utmpx</ignore>
+          <ignore>/etc/wtmpx</ignore>
+          
+          <ignore type="sregex">/var/lib/dpkg</ignore>  <ignore type="sregex">/var/lib/rpm</ignore>   <ignore type="sregex">/var/lib/yum</ignore>   <ignore type="sregex">/var/cache/yum</ignore> <ignore type="sregex">/var/lib/dnf</ignore>   <ignore type="sregex">/var/cache/dnf</ignore> <ignore type="sregex">/var/lib/pacman</ignore><ignore type="sregex">/var/lib/apk</ignore>   <ignore>/var/log</ignore>
+          <ignore>/var/ossec/logs</ignore>
+
         <whodata>
             <provider>audit</provider>
         </whodata>
     </syscheck>
+
+    <localfile>
+    <location>/var/log/auth.log</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/syslog</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/secure</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/messages</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/cron</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/kern.log</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/apache2/*access*log</location>
+    <log_format>apache</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/apache2/*error*log</location>
+    <log_format>apache</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/httpd/*access*log</location>
+    <log_format>apache</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/httpd/*error*log</location>
+    <log_format>apache</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/nginx/*access.log</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/nginx/*error.log</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/suricata/eve.json</location>
+    <log_format>json</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/ufw.log</location>
+    <log_format>syslog</log_format>
+    </localfile>
+    
+    <localfile>
+    <location>/var/log/mysql/error.log</location>
+    <log_format>mysql_log</log_format>
+    </localfile>
+    <localfile>
+    <location>/var/log/mariadb/mariadb.log</location>
+    <log_format>mysql_log</log_format>
+    </localfile>
+
     <sca>
         <enabled>yes</enabled>
         <scan_on_start>yes</scan_on_start>
