Reorganizing and cleaning up parts of the github

--- a/Tools/Wazuh/Configs/linux-default.conf
+++ b/Tools/Wazuh/Configs/linux-default.conf
@@ -41,6 +41,19 @@
         </whodata>
     </syscheck>
 
+    <sca>
+        <enabled>yes</enabled>
+        <scan_on_start>yes</scan_on_start>
+        <interval>30m</interval>
+        <skip_nfs>yes</skip_nfs>
+    </sca>
+    <vulnerability-detection>
+        <enabled>yes</enabled>
+        <feed-update-interval>120m</feed-update-interval>
+    </vulnerability-detection>
+
+
+    <!-- LOG FILES. Splunk is taking this role and we don't have time to create all the custom decoders and automated responses. Therefore, this is commented out.
     <localfile>
     <location>/var/log/auth.log</location>
     <log_format>syslog</log_format>
@@ -112,16 +125,6 @@
     <location>/var/log/mariadb/mariadb.log</location>
     <log_format>mysql_log</log_format>
     </localfile>
-
-    <sca>
-        <enabled>yes</enabled>
-        <scan_on_start>yes</scan_on_start>
-        <interval>30m</interval>
-        <skip_nfs>yes</skip_nfs>
-    </sca>
-    <vulnerability-detection>
-        <enabled>yes</enabled>
-        <feed-update-interval>120m</feed-update-interval>
-    </vulnerability-detection>
+    -->
 </agent_config>
 
