--- a/Tools/Wazuh/Configs/ossec.conf
+++ b/Tools/Wazuh/Configs/ossec.conf
@@ -1,5 +1,5 @@
 <!--
-  Wazuh - Manager - Default configuration for debian 12
+  Wazuh - Manager - Default configuration for ol 9.2
   More info at: https://documentation.wazuh.com
   Mailing list: https://groups.google.com/forum/#!forum/wazuh
 -->
@@ -22,7 +22,7 @@
 
   <!-- Choose between "plain", "json", or "plain,json" for the format of internal logs -->
   <logging>
-    <log_format>plain</log_format>
+    <log_format>json</log_format>
   </logging>
 
   <remote>
@@ -43,8 +43,8 @@
     <check_ports>yes</check_ports>
     <check_if>yes</check_if>
 
-    <!-- Frequency that rootcheck is executed - every 12 hours -->
-    <frequency>43200</frequency>
+    <!-- Frequency that rootcheck is executed - every 30 minutes-->
+    <frequency>1800</frequency>
 
     <rootkit_files>etc/rootcheck/rootkit_files.txt</rootkit_files>
     <rootkit_trojans>etc/rootcheck/rootkit_trojans.txt</rootkit_trojans>
@@ -77,7 +77,7 @@
   <!-- System inventory -->
   <wodle name="syscollector">
     <disabled>no</disabled>
-    <interval>1h</interval>
+    <interval>30m</interval>
     <scan_on_start>yes</scan_on_start>
     <hardware>yes</hardware>
     <os>yes</os>
@@ -102,7 +102,7 @@
   <vulnerability-detection>
     <enabled>yes</enabled>
     <index-status>yes</index-status>
-    <feed-update-interval>120m</feed-update-interval>
+    <feed-update-interval>60m</feed-update-interval>
   </vulnerability-detection>
 
   <indexer>
@@ -112,10 +112,10 @@
     </hosts>
     <ssl>
       <certificate_authorities>
-        <ca>/etc/filebeat/certs/root-ca.pem</ca>
+        <ca>/var/ossec/etc/root-ca.pem</ca>
       </certificate_authorities>
-      <certificate>/etc/filebeat/certs/wazuh-server.pem</certificate>
-      <key>/etc/filebeat/certs/wazuh-server-key.pem</key>
+      <certificate>/var/ossec/etc/client.pem</certificate> 
+      <key>/var/ossec/etc/client.key</key>
     </ssl>
   </indexer>
 
@@ -123,8 +123,8 @@
   <syscheck>
     <disabled>no</disabled>
 
-    <!-- Frequency that syscheck is executed default every 12 hours -->
-    <frequency>43200</frequency>
+    <!-- Frequency that syscheck is executed default every 30 minutes -->
+    <frequency>1800</frequency>
 
     <scan_on_start>yes</scan_on_start>
 
