--- a/SaltyBoxes/Salt-GUI/config.json
+++ b/SaltyBoxes/Salt-GUI/config.json
@@ -1,7 +1,7 @@
 {
-  "proxyURL": "",
-  "saltAPIUrl": "",
-  "username": "",
-  "password": "",
-  "eauth": ""
+  "proxyURL": "http://localhost:3000",
+  "saltAPIUrl": "https://salt80.soc-se.org/salt-api",
+  "username": "sysadmin",
+  "password": "Changeme1!",
+  "eauth": "pam"
 }
